# solar-parser

./: Cargo.toml  README.md  changes.md  todo.md
grammar/: body.grammar  keywords.syntax
grammar/expr/: block.syntax  expression.syntax  let_in.syntax
grammar/import/: import.example.sol  import.grammar  import.sol.example
src/: comment.rs  lib.rs  parse.rs  util.rs
src/ast/: body.rs  function.rs  identifier.rs  import.rs  keywords.rs  mod.rs  structs.rs  ty.rs  type_declaration.rs  type_signature.rs
src/ast/expr/: block.rs  closure.rs  full.rs  let_in.rs  literal.rs  mod.rs  string.rs  when.rs
syntax-tests/: abc.sol  clojures.sol  closure.sol  fn.sol  goal1.sol  let.sol  use_1.sol  use_2.sol  use_3.sol  use_4.sol  use_5.sol
