[package]
name = "solar-parser"
version = "0.1.0"
authors = ["Nils Martel <nilsmartel@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A byte-oriented, zero-copy, parser combinators library
nom = "7.1.3"

